--- a/application/views/home.hbs
+++ b/application/views/home.hbs
@@ -1,18 +1,21 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/public/css/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Montserrat:wght@100&display=swap');
     </style>
-    <!--<script defer src="../js/registration.js"></script>-->
+    <title>Home Page</title>
+    <script defer src="../js/home.js"></script>
 </head>
-  <body>
-    {{{body}}}
-  </body>
+<body>
+    <h2>Welcome to the Home Page!</h2>
+    <h4 id="item-counter"></h4>
+    <br>
+    <div id="container" class="fade"></div>
+</body>
 </html>
-<!--<link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">-->
