--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -46,7 +46,7 @@ h4 {
 }
 
 body {
-    background-image: url(../resources/blue-marble.jpeg);
+    background: url(../resources/blue-marble.jpeg);
     background-size: cover;
     height: 100%;
     display: flex;
@@ -55,7 +55,15 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
-button, #item-counter {
+header {
+    background: url(../resources/banner.png) no-repeat center;
+    background-color: rgb(192,217,247);
+    background-size: 50%, 50%;
+    height: 175px;
+    z-index: 100;
+}
+
+button {
     border-radius: 20px;
     border: 1px solid floralwhite;
     background-color: #A7C7E7;
@@ -106,16 +114,6 @@ span {
     margin: auto;
     background: white;
     box-shadow: inset 0 0 0 10px #A7C7E7;
-}
-
-#banner-icon {
-    background-image: url(../resources/amigurubea-banner.png);
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 200px;
 }
 
 #post-info {
