--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -12,6 +12,7 @@
     <!--<script defer src="../js/registration.js"></script>-->
 </head>
   <body>
+  {{> banner}}
     {{{body}}}
   </body>
 </html>
