--- a/application/views/partials/banner.hbs
+++ b/application/views/partials/banner.hbs
@@ -1,3 +1,2 @@
-<div id="banner">
-    <img id="banner-icon" src="public/resources/amigurubea-banner.png" alt="Banner Image"/>
-</div>
+<header>
+</header>
