--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -5,32 +5,6 @@
 }
 
 h1 {
-    border-color: black;
-    margin: 70px;
-    text-align: center;
-    align-self: center;
-    font-family: 'Birthstone', cursive;
-    font-size: 100px;
-    width: 60%;
-    background-color: white;
-    background-clip: content-box;
-    box-shadow: inset 0 0 0 10px #A7C7E7;
-}
-
-h2 {
-    border-color: black;
-    margin: 25px;
-    text-align: center;
-    align-self: center;
-    font-family: 'Birthstone', cursive;
-    font-size: 65px;
-    width: 60%;
-    background-color: white;
-    background-clip: content-box;
-    box-shadow: inset 0 0 0 10px #A7C7E7;
-}
-
-h3 {
     font-family: "Bodoni 72 Smallcaps", sans-serif;
     font-size: 25pt;
     text-align: center;
@@ -53,6 +27,10 @@ body {
     justify-content: center;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
+}
+
+fieldset {
+    height: auto;
 }
 
 header {
@@ -89,6 +67,7 @@ button {
 }
 
 input[type=text], input[type=password], input[type=email] {
+    border-radius: 20px;
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -118,7 +97,16 @@ span {
     box-shadow: inset 0 0 0 10px #A7C7E7;
 }
 
-.register, .post {
+.register {
+    width: 800px;
+    font-size: 15pt;
+    height: 500px;
+    margin: auto;
+    background: white;
+    box-shadow: inset 0 0 0 10px #A7C7E7;
+}
+
+.post {
     width: 800px;
     font-size: 15pt;
     height: auto;
@@ -153,7 +141,12 @@ img {
     background: aliceblue;
 }
 
-#button, #item-counter{
+#field {
+    float: left;
+    width: 50%;
+}
+
+#button, #item-counter {
     display: flex;
     text-align: center;
     justify-content: center;
@@ -171,7 +164,7 @@ img {
     text-align: center;
 }
 
-#container {
+#content {
     display: grid;
     position: relative;
     grid-template-rows: repeat(5, 1fr);
@@ -184,11 +177,14 @@ img {
     z-index: 10;
 }
 
-#container p {
-    display: grid;
-    font-size: 15px;
-    align-self: center;
-    text-align: center;
-    align-content: center;
-    color: lightslategray;
+#home-container {
+    position: relative;
+    height: fit-content;
+}
+
+#search-text {
+    width: 69%;
+    background-image: url(../resources/magnifying-glass.png);
+    background-repeat: no-repeat;
+    background-position: right center;
 }
