--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="icon" type="image/ico" sizes="70x70" href="/public/favicon.ico">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Montserrat:wght@100&display=swap');
     </style>
+    <title>AmiguruBea</title>
     <!--<script defer src="../js/registration.js"></script>-->
 </head>
   <body>
@@ -21,4 +23,3 @@
 
   </body>
 </html>
-<!--<link rel="icon" href="/public/favicon.ico" sizes="70x70" type="image/ico">-->
