--- a/application/views/postimage.hbs
+++ b/application/views/postimage.hbs
@@ -13,8 +13,8 @@
 
             <br />
 
-            <label id="image">Select Image: </label>
-            <label><input type="file" name="image"></label>
+            <label id="image-post">Select Image: </label>
+            <label><input type="file" name="image-post"></label>
 
             <br /><br />
 
