--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -1,33 +1,33 @@
 <div class="view">
-    <section id="image">
+    <div id="image">
         <img src="public/resources/chonkybee.png" alt="Image not found. Sorry!">
-    </section>
-
-    <br /><br />
-
-    <div id="post-info">
-        <section id="image-title">
-            <label>Image Title: </label>
-        </section>
-
-        <br />
-
-        <section id="image-author">
-            <label>Image Author: </label>
-        </section>
-
-        <br />
-
-        <section id="creation-time">
-            <label>Image Creation Time: </label>
-        </section>
-
-        <br />
-
-        <section id="description">
-            <label>Description: </label>
-        </section>
-
-        <br />
     </div>
+    <div id="image">
+        <div id="post-info">
+            <section id="image-title">
+                <label>Image Title: </label>
+            </section>
+            <section id="image-author">
+                <label>Image Author: </label>
+            </section>
+            <section id="creation-time">
+                <label>Image Creation Time: </label>
+            </section>
+            <br/>
+            <section id="description">
+                <label>Description: </label>
+            </section>
+            <br/>
+        </div>
+    </div>
+    <div id="image">
+        <section id="post-info">
+            <h2>Comments</h2>
+            <div id="comment-section">
+            </div>
+        </section>
+        <input id="comment-text" name="comment-text" type="text" placeholder="Type a comment here!">
+    </div>
+    <br />
+    <br />
 </div>
