--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -12,7 +12,7 @@ h1 {
     color: black;
 }
 
-h4 {
+h2 {
     font-family: "Bodoni 72 Smallcaps", sans-serif;
     font-size: 15pt;
     text-align: center;
@@ -115,9 +115,16 @@ span {
     box-shadow: inset 0 0 0 10px #A7C7E7;
 }
 
-#post-info {
-    width: 800px;
+#comment-section {
+    width: 500px;
     font-size: 15pt;
+    height: 165px;
+    overflow: scroll;
+}
+
+#post-info {
+    width: 600px;
+    font-size: 12pt;
     padding: 15px;
     height: auto;
     margin: auto;
@@ -141,7 +148,7 @@ img {
     background: aliceblue;
 }
 
-#field {
+#field, #image {
     float: left;
     width: 50%;
 }
@@ -183,8 +190,21 @@ img {
 }
 
 #search-text {
-    width: 69%;
+    width: 69.5%;
     background-image: url(../resources/magnifying-glass.png);
     background-repeat: no-repeat;
     background-position: right center;
+    border: 2px solid white;
+}
+
+#comment-text {
+    background-image: url(../resources/speech-bubble.png);
+    background-repeat: no-repeat;
+    background-position: 560px;
+    background-size: 4%;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+    width: 595px;
+    border: 2px solid white;
 }
