--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -11,7 +11,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Montserrat:wght@100&display=swap');
     </style>
     <title>AmiguruBea</title>
-    <!--<script defer src="../js/registration.js"></script>-->
+    <script defer src="../js/registration.js"></script>
 </head>
   <body>
   <div id="home-container">
