--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -1,12 +1,12 @@
-<form>
+<form method="POST" action="/users/login" enctype="application/x-www-form-urlencoded">
     <div class ="login">
         <fieldset>
             <h1>Sign In</h1>
             <label id="user">Username:</label>
-            <label> <input type="text" placeholder="Enter Username" name="user"/> </label>
+            <label> <input type="text" placeholder="Enter Username" required name="username"/> </label>
             <br />
             <label id="pass">Password:</label>
-            <label> <input type="password" placeholder="Enter Password" name="pass"/> </label>
+            <label> <input type="password" placeholder="Enter Password" required name="password"/> </label>
             <br />
             <div id="button">
                 <button type="submit">Log In</button>
