--- a/application/views/partials/footer.hbs
+++ b/application/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<footer>
-    <span id="footer-name">Beatrice Aragones ©2021 </span>
-    <a id="email-link" href="mailto:amigurubea@gmail.com">Contact Owner</a>
+<footer id="footer">
+        <span id="footer-name">Beatrice Aragones ©2021 </span>
+        <a id="email-link" href="mailto:amigurubea@gmail.com">Contact Owner</a>
 </footer>
