--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -1,4 +1,4 @@
-<form id="form" method="post" onsubmit="validateForm(event)" action="/users/register" enctype="application/x-www-form-urlencoded">
+<form id="form" method="POST" onsubmit="validateForm(event)" action="/users/register" enctype="application/x-www-form-urlencoded">
     <div class="register">
         <br/>
         <h1>Sign Up</h1>
