--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,3 +1,5 @@
-<div id="container">
-    <div id="grid-container"></div>
+<div id="grid-container">
+    {{#each results}}
+        {{> card this}}
+    {{/each}}
 </div>
