--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -10,6 +10,7 @@
     <title>AmiguruBea</title>
     <script defer src="/public/js/registration.js"></script>
     <script defer src="/public/js/frontend.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
   <body>
   <div id="home-container">
