--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -1,6 +1,6 @@
 <div class="view">
     <div id="image">
-        <img src="public/resources/chonkybee.png" alt="Image not found. Sorry!">
+        <img src="../public/images/chonkybee.png" alt="Image not found. Sorry!">
     </div>
     <div id="image">
         <div id="post-info">
