--- a/application/views/postimage.hbs
+++ b/application/views/postimage.hbs
@@ -1,4 +1,4 @@
-<form id="post-image" method="POST" enctype="multipart/form-data">
+<form id="post-image" method="POST" enctype="multipart/form-data" action="posts/createPost">
     <div class="post">
         <fieldset>
             <h1>Image Information</h1>
@@ -9,8 +9,7 @@
 
             <label id="description">Description:</label>
             <label for="description-box"></label>
-            <textarea id="description-box" rows="3" placeholder="Type a Description" required
-                      name="description"></textarea>
+            <textarea id="description-box" rows="3" placeholder="Type a Description" required name="description"></textarea>
 
             <br/>
 
