--- a/application/views/partials/card.hbs
+++ b/application/views/partials/card.hbs
@@ -3,6 +3,6 @@
     <div class="card-body">
         <p class="card-title">{{title}}</p>
         <p class="card-text">{{description}}</p>
-        <button id="post-details" onclick="location.href='/getPost/{{id}}'" type="button">Post Details</button>
+        <button id="post-details" onclick="location.href='/post/{{id}}'" type="button">Post Details</button>
     </div>
 </div>
