--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -1,6 +1,7 @@
 <nav id="nav">
     <button onclick="location.href='/'" type="button">Home</button>
     <input id="search-text" name="search-text" type="text" placeholder="Search here!">
+    <i id="search-button" name="search-button"></i>
     <button onclick="location.href='/postimage'" type="button">Post</button>
 
     {{#if logged}}
