--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/public/css/style.css">
     <link rel="icon" type="image/ico" sizes="70x70" href="/public/favicon.ico">
     <style> @import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Montserrat:wght@100&display=swap');</style>
-    <title>AmiguruBea</title>
+    <title>{{title}}</title>
     <script defer src="/public/js/registration.js"></script>
     <script defer src="/public/js/frontend.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
