--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -1,22 +1,24 @@
 <form method="POST" action="/users/login" enctype="application/x-www-form-urlencoded">
-    <div class ="login">
-        <fieldset>
-            <h1>Sign In</h1>
-            <label id="user">Username:</label>
-            <label> <input type="text" placeholder="Enter Username" required name="username"/> </label>
-            <br />
-            <label id="pass">Password:</label>
-            <label> <input type="password" placeholder="Enter Password" required name="password"/> </label>
-            <br />
-            <div id="button">
-                <button type="submit">Log In</button>
-            </div>
-            <br />
-            <div id="forgot">
-                <a href="#">Forgot password?</a>
+    <div id="grid-container">
+        <div class ="login">
+            <fieldset>
+                <h1>Sign In</h1>
+                <label id="user">Username:</label>
+                <label> <input type="text" placeholder="Enter Username" name="username"/> </label>
                 <br />
-                Need an account? <a href="/registration">Sign up</a>
-            </div>
-        </fieldset>
+                <label id="pass">Password:</label>
+                <label> <input type="password" placeholder="Enter Password" name="password"/> </label>
+                <br />
+                <div id="button">
+                    <button type="submit">Log In</button>
+                </div>
+                <br />
+                <div id="forgot">
+                    <a href="#">Forgot password?</a>
+                    <br />
+                    Need an account? <a href="/registration">Sign up</a>
+                </div>
+            </fieldset>
+        </div>
     </div>
 </form>
