--- a/application/views/postimage.hbs
+++ b/application/views/postimage.hbs
@@ -1,34 +1,28 @@
 <form id="post-image" method="POST" enctype="multipart/form-data" action="posts/createPost">
-    <div class="post">
-        <fieldset>
-            <h1>Image Information</h1>
-            <label id="title">Title:</label>
-            <label> <input type="text" placeholder="Insert Title" required name="title"></label>
-
-            <br/>
-
-            <label id="description">Description:</label>
-            <label for="description-box"></label>
-            <textarea id="description-box" rows="3" placeholder="Type a Description" required name="description"></textarea>
-
-            <br/>
-
-            <label id="image-post">Select Image: </label>
-            <label><input type="file" required name="selectImage"></label>
-
-            <br/><br/>
-
-            <div id="agree">
-                <label id="aup">I acknowledge that I have read and agreed with the <a href="">Acceptable Use Policy.</a></label>
-                <label><input type="checkbox" required name="policy"></label>
-            </div>
-
-            <br/>
-
-            <div id="button">
-                <button type="submit">Post Image</button>
-            </div>
-            <br/>
-        </fieldset>
+    <div id="grid-container">
+        <div class="post">
+            <fieldset>
+                <h1>Image Information</h1>
+                <label id="title">Title:</label>
+                <label> <input type="text" placeholder="Insert Title" name="title"></label>
+                <br/>
+                <label id="description">Description:</label>
+                <label for="description-box"></label>
+                <textarea id="description-box" rows="3" placeholder="Type a Description" name="description"></textarea>
+                <br/>
+                <label id="image-post">Select Image: </label>
+                <label><input type="file" name="selectImage"></label>
+                <br/><br/>
+                <div id="agree">
+                    <label id="aup">I acknowledge that I have read and agreed with the <a href="">Acceptable Use Policy.</a></label>
+                    <label><input type="checkbox" name="policy"></label>
+                </div>
+                <br/>
+                <div id="button">
+                    <button type="submit">Post Image</button>
+                </div>
+                <br/>
+            </fieldset>
+        </div>
     </div>
 </form>
