--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -1,46 +1,42 @@
 <form id="form" method="POST" action="/users/register" enctype="application/x-www-form-urlencoded">
-    <div class="register">
-        <br/>
-        <h1>Sign Up</h1>
-        <div id="field">
-            <fieldset>
-                <label id="email">Email:</label>
-                <label> <input type="email" placeholder="Enter Email" required name="email"></label>
-
-                <br/>
-
-                <label id="username">Username:</label>
-                <label> <input type="text" placeholder="Enter Username" id="user" required name="username"></label>
-            </fieldset>
-        </div>
-        <div id="field">
-            <fieldset>
-                <label id="password">Password:</label>
-                <label> <input type="password" placeholder="Enter Password" id="pass" required name="password"></label>
-
-                <br/>
-
-                <label id="confirmpassword">Confirm Password:</label>
-                <label> <input type="password" placeholder="Re-enter Password" id="confirmpass" required name="confirmpass"></label>
-            </fieldset>
-        </div>
-        <div id="attest">
-            <label id="age">I attest that I am at least 13 years of age.</label>
-            <input type="checkbox" name="age" required>
-
+    <div id="grid-container">
+        <div class="register">
             <br/>
-
-            <label id="tos">I acknowledge that I have read and agreed with <a href="">TOS and Privacy Rules.</a></label>
-            <input type="checkbox" name="tos" required>
+            <h1>Sign Up</h1>
+            <div id="field">
+                <fieldset>
+                    <label id="email">Email:</label>
+                    <label> <input type="email" placeholder="Enter Email" name="email"></label>
+                    <br/>
+                    <label id="username">Username:</label>
+                    <label> <input type="text" placeholder="Enter Username" id="user" name="username"></label>
+                </fieldset>
+            </div>
+            <div id="field">
+                <fieldset>
+                    <label id="password">Password:</label>
+                    <label> <input type="password" placeholder="Enter Password" id="pass" name="password"></label>
+                    <br/>
+                    <label id="confirmpassword">Confirm Password:</label>
+                    <label> <input type="password" placeholder="Re-enter Password" id="confirmpass" name="confirmpass"></label>
+                </fieldset>
+            </div>
+            <div id="attest">
+                <label id="age">I attest that I am at least 13 years of age.</label>
+                <input type="checkbox" name="age">
+                <br/>
+                <label id="tos">I acknowledge that I have read and agreed with <a href="">TOS and Privacy Rules.</a></label>
+                <input type="checkbox" name="tos">
+            </div>
+            <br/>
+            <div id="button">
+                <button type="submit">Sign Up</button>
+            </div>
+            <br/>
+            <div id="account-made">
+                Already have an account? <a href="/login">Log in</a>
+            </div>
+            <br/>
         </div>
-        <br/>
-        <div id="button">
-            <button type="submit">Sign Up</button>
-        </div>
-        <br/>
-        <div id="account-made">
-            Already have an account? <a href="/login">Log in</a>
-        </div>
-        <br/>
     </div>
 </form>
